style: format code with Google Java Format and Prettier
This commit fixes the style issues introduced in 22db62c according to the output
from Google Java Format and Prettier.

Details: None